# 42-Get_Next_Line.c

./: CMakeLists.txt  get_next_line.c  get_next_line.h  main.c  tocheck.txt  wrong_gnl.c
pacodir/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_unrefactored.c  get_next_line_utils.c  main.c
test_files/: 43_with_nl.txt
